--- a/개발자용어사전.md
+++ b/개발자용어사전.md
@@ -1,4 +1,4 @@
-* conf -> configuration -> 설정
-
+* conf : 설정(configuration)
 * i18n == internationalization
 * l10n == Localization
+* 디자인 패턴 : 다수의 시행착오를 통해 발견된 현재까지의 가장 우수한 해결책
