--- a/AI/머신러닝.ipynb
+++ b/AI/머신러닝.ipynb
@@ -67,8 +67,54 @@
     "    * np.ones((3,2))\n",
     "    * np.reshape(2,5) : 2 * 5로 ndarray 변환\n",
     "    * np.reshape(-1, 5) : col은 5로 고정, row은 axis 크기 자동 생성 /\n",
-    "        * 1차원 변환 (-1,) / 2차원 변환 (-1,1) "
+    "        * 1차원 변환 (-1,) / 2차원 변환 (-1,1) \n",
+    "        \n",
+    "* 인덱싱\n",
+    "    * array1[0 1 2 3 4 5 6 7 8 9]\n",
+    "    * 슬라이싱 : array[:,:]\n",
+    "    * 팬시 인덱싱 : array[[2,4,7]] : [3,5,8]\n",
+    "    * 불린 인덱싱 : array1d = np.arange(start=1, stop=10)\n",
+    "                    array3 = array1d[array1d > 5] # 5보다 큰 값\n",
+    "\n",
+    "\n",
+    "* 배열의 정렬\n",
+    "    * sort()\n",
+    "        * np.sort(ndarray) : 인자로 들어원 원 행렬 그대로 유지한 채 원 행렬의 정렬된 행렬 반환\n",
+    "        * ndarray.sort() : 원 행렬 자체를 정렬한 형태로 반환, 반환값은 None / 즉, 원본이 바뀜\n",
+    "        * 둘 다 오른차순이 기본, 내림차순 위해선 [::-1] 필요\n",
+    "        * 2차원에서 axis=0 행끼리 / axis=1 열끼리\n",
+    "    * argsort()\n",
+    "        * 키맵핑 시 유용"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf38da44",
+   "metadata": {},
+   "source": [
+    "### 판다스\n",
+    "* import pandas as pd\n",
+    "* read_csv() : csv 파일 로드, sep 인자 다양\n",
+    "* head(), tail() : DF의 기본 5개 데이터 추출 / ()안에 숫자 표기 가능\n",
+    "* pd.set_option('display.max_rows', 1000), ('display.max_colwidth', 100), ('display.max_columns', 100)\n",
+    "* shape : 행과 열 크기 속성\n",
+    "* info() : DF 내 칼람명, 데이터 타임, Null 건수, 데이터 건수 제공\n",
+    "* describe() : 데이터의 평균, 표준편차, 4분위 분포도 등 제공\n",
+    "* DF 생성 : 딕셔너리로 생성 가능\n",
+    "    * dic1 = {'Name': ['Chulmin', 'Eunkyung','Jinwoong','Soobeom'],\n",
+    "                'Year': [2011, 2016, 2015, 2015],\n",
+    "                'Gender': ['Male', 'Female', 'Male', 'Male']}\n",
+    "* 칼럼, 인덱스명 호출\n",
+    "    * print(\"columns:\",titanic_df.columns) ,print(\"index:\",titanic_df.index), print(\"index value:\", titanic_df.index.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10beb696",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
