--- a/AI/머신러닝.ipynb
+++ b/AI/머신러닝.ipynb
@@ -19,7 +19,7 @@
    "id": "41033d8c",
    "metadata": {},
    "source": [
-    "## 머신러닝 단점\n",
+    "### 머신러닝 단점\n",
     "1. 데이터에 너무 의존적(Garbage in, Garbage out)\n",
     "2. 과적합 : 학습데이터에만 적절, 실제 부적절수도\n",
     "3. 블랙박스 : 알고리즘 논리적 이해 어려울 수도\n",
@@ -31,7 +31,7 @@
    "id": "9dd0a516",
    "metadata": {},
    "source": [
-    "## 주요 패키지\n",
+    "### 주요 패키지\n",
     "* 머신러닝 패키지 : scikitlearn\n",
     "* 배열/선형대수/통계 패키지 : Numpy, scipy\n",
     "* 데이터 핸들링 : pandas\n",
@@ -105,7 +105,17 @@
     "                'Year': [2011, 2016, 2015, 2015],\n",
     "                'Gender': ['Male', 'Female', 'Male', 'Male']}\n",
     "* 칼럼, 인덱스명 호출\n",
-    "    * print(\"columns:\",titanic_df.columns) ,print(\"index:\",titanic_df.index), print(\"index value:\", titanic_df.index.values)"
+    "    * print(\"columns:\",titanic_df.columns)\n",
+    "    * print(\"index:\",titanic_df.index)\n",
+    "    * print(\"index value:\", titanic_df.index.values)\n",
+    "    * inplace=False > 원본 그대로\n",
+    "    \n",
+    "* Index\n",
+    "    * DF, Series를 고유 식별하는 개체(별도 col 값은 아님)\n",
+    "    * 연산 시에는 제외됨, 오직 식별용!\n",
+    "    * 추출 : DataFrame.index\n",
+    "    * 고유한 값만 유지하면 반드시 숫자 아니어도 됨(문자형, 시간도 가능)\n",
+    "    * reset_index() : 인덱스 연속된 숫자로 갈아엎음, 기존 인데스는 'index' col로 추가"
    ]
   },
   {
