--- a/Python/프로그래머스.ipynb
+++ b/Python/프로그래머스.ipynb
@@ -2,8 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "ddcdf385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#배열 두배 만들기\n",
+    "def solution(numbers):\n",
+    "    answer = []\n",
+    "    for i in numbers:\n",
+    "        answer += i*2\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "76c8f721",
+   "id": "7f68a985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#분수의 덧셈\n",
+    "def solution(numer1, denom1, numer2, denom2):\n",
+    "    answer = []\n",
+    "    answer = (numer1/denom1) + (numer2/denom2) \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "17c37560",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (35465070.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    else\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#숫자 비교하기\n",
+    "def solution(num1, num2):\n",
+    "    if num1 == num2:\n",
+    "        print(1)\n",
+    "    else:\n",
+    "        print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "175582f2",
    "metadata": {},
    "outputs": [],
    "source": [
