--- a/Python/프로그래머스.ipynb
+++ b/Python/프로그래머스.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "60880836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#피자 나눠 먹기 (1)\n",
+    "def solution(n):\n",
+    "    if n <= 7:\n",
+    "        print(1)\n",
+    "    elif n%7 == 0:\n",
+    "        print(n//7)\n",
+    "    else:\n",
+    "        print(n//7 + 1)\n",
+    "        \n",
+    "    머쓱이네 피자가게는 피자를 일곱 조각으로 잘라 줍니다. 피자를 나눠먹을 사람의 수 n이 주어질 때, 모든 사람이 피자를 한 조각 이상 먹기 위해 필요한 피자의 수를 return 하는 solution 함수를 완성해보세요.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "37d82eda",
    "metadata": {},
