--- a/Software Engineering.ipynb
+++ b/Software Engineering.ipynb
@@ -132,16 +132,61 @@
     "### Use Case Specification\n",
     "---\n",
     "#### Detail Each Use Case\n",
-    "배우(Actors) 및 사용 사례(Use Cases) 식별: 시스템과 상호 작용하는 모든 외부 요소(사람, 시스템, 하드웨어 등)와 시스템이 제공해야 하는 기능을 식별합니다.\n",
+    "배우(Actors) 및 사용 사례(Use Cases) 식별\n",
     "\n",
-    "각 사용 사례 개요(Outline): 각 사용 사례에 대해 간략한 설명을 제공하고 기본 이벤트 흐름을 정의합니다. 또한, 기본 흐름과 다른 대안적인 이벤트 흐름을 식별합니다.\n",
+    "배우(Actors): 시스템과 상호 작용하는 외부 요소를 식별합니다. 예를 들어 사용자, 다른 시스템, 데이터베이스 등이 있습니다.\n",
+    "사용 사례(Use Cases): 시스템이 수행해야 하는 기능을 식별합니다. 각 사용 사례는 시스템이 어떤 작업을 수행하는지 설명합니다.\n",
+    "각 사용 사례 개요\n",
     "\n",
-    "각 사용 사례 상세화(Detail): 사용 사례에 대한 세부 사항을 추가합니다. 여기에는 사전 조건(pre-conditions), 사후 조건(post-conditions), 특별한 요구 사항, 관계, 사용 사례 다이어그램 등이 포함될 수 있습니다.\n",
+    "간단한 설명(Brief Description): 각 사용 사례의 목적 및 기능을 간략하게 설명합니다.\n",
+    "기본 이벤트 흐름(Basic Flow of Events): 사용 사례가 성공적으로 완료되기 위한 일반적인 단계들을 기술합니다.\n",
+    "대안적 이벤트 흐름(Alternative Flows of Events): 예외 상황이나 다른 조건에서 발생할 수 있는 대체 시나리오를 식별합니다.\n",
+    "각 사용 사례 상세화\n",
     "\n",
-    "각 사용 사례의 이벤트 흐름 구조화(Structure): 사용 사례의 흐름을 논리적으로 구조화하여 문서화합니다.\n",
+    "상세 추가(Add Detail): 사용 사례를 더욱 상세하게 기술합니다.\n",
+    "사전 및 사후 조건(Pre and Post Conditions): 사용 사례가 시작되기 전과 후의 시스템 상태를 설명합니다.\n",
+    "특별한 요구 사항(Special Requirements): 특별한 기술, 시스템 상태, 외부 요인 등을 기술합니다.\n",
+    "관계(Relationships): 다른 사용 사례나 배우와의 관계를 기술합니다.\n",
+    "사용 사례 다이어그램(Use-Case Diagrams): 시각적 도구를 사용하여 배우, 사용 사례, 그들 간의 관계를 나타냅니다.\n",
+    "각 사용 사례의 이벤트 흐름 구조화\n",
+    "\n",
+    "각 사용 사례의 이벤트 흐름을 논리적으로 구조화하여 문서화합니다. 이는 사용 사례를 이해하고, 분석하고, 구현하는 데 도움이 됩니다.\n",
+    "구조화는 사용 사례를 더 명확하고 이해하기 쉽게 만들며, 개발 프로세스에서의 소통과 협업을 용이하게 합니다.\n",
     "\n",
     "---\n",
-    "####"
+    "#### Why Detail Use Cases?\n",
+    "사용 사례를 상세하게 기술하는 것은 여러 중요한 목적을 가지고 있습니다:\n",
+    "\n",
+    "소프트웨어 요구 사항 명시(Specify the Software Requirements): 사용 사례는 시스템이 수행해야 할 구체적인 기능과 행동을 명확하게 정의합니다. 이를 통해 개발자와 프로젝트 관리자가 시스템이 충족해야 하는 요구 사항을 이해하고, 이에 기반하여 설계와 개발 계획을 수립할 수 있습니다.\n",
+    "\n",
+    "이벤트 흐름의 중요한 세부 사항 명확화(Clarify Important Details in Flow of Events):\n",
+    "\n",
+    "배우가 하는 행동(What the Actor Does): 사용자 또는 다른 시스템이 시스템과 상호작용하는 방식을 정의합니다.\n",
+    "시스템의 반응(What the System Does in Response): 배우의 행동에 대한 시스템의 반응과 처리 과정을 설명합니다.\n",
+    "정보 교환(What Information is Exchanged): 배우와 시스템 간에 교환되는 데이터와 정보의 세부 사항을 명시합니다.\n",
+    "추가 정보 기술(Describe Additional Information):\n",
+    "\n",
+    "사전 조건(Preconditions): 사용 사례가 시작되기 전에 충족되어야 하는 조건들을 기술합니다. 이는 해당 기능이 제대로 수행되기 위한 필수적인 상태 또는 이벤트를 포함합니다.\n",
+    "사후 조건(Postconditions): 사용 사례의 성공적인 완료 후 시스템의 상태를 기술합니다. 이는 시스템이 특정 작업을 수행한 후 어떻게 변화해야 하는지를 명확하게 합니다.\n",
+    "사용 사례를 자세히 기술함으로써, 소프트웨어 개발 팀은 시스템의 요구 사항을 정확하게 이해하고, 이에 맞춰 효과적인 설계와 구현을 할 수 있습니다. 또한, 이러한 상세한 문서는 프로젝트의 다른 이해관계자들에게도 시스템의 기능과 작동 방식에 대한 명확한 이해를 제공합니다.\n",
+    "\n",
+    "---\n",
+    "#### Detail the Basic Flow of Events\n",
+    "이 이미지에는 사용 사례 '교수가 가르칠 과정 선택(Select courses to teach)'의 기본 흐름이 나와 있습니다. 이 사용 사례는 교수가 다가오는 학기에 가르칠 과정을 등록하길 원할 때 시작됩니다. 세 단계로 구조화되어 있으며, 각 단계에는 번호와 제목이 있고 1-3 문장으로 단계를 설명합니다. 각 단계는 이벤트의 왕복을 나타내야 합니다. 이미지에 제시된 내용을 바탕으로 다음과 같이 각 단계를 구조화할 수 있습니다:\n",
+    "\n",
+    "과정 제공 목록 검색(Retrieve and display the list of course offerings)\n",
+    "\n",
+    "교수가 현재 학기에 가르칠 수 있는 과정의 목록을 검색하고 표시합니다.\n",
+    "교수가 이전에 선택했던 과정 목록도 검색하여 표시합니다.\n",
+    "과정 제공 선택(Professor selects course offerings)\n",
+    "\n",
+    "교수는 다가오는 학기에 가르치길 원하는 과정을 선택하거나 선택 해제합니다.\n",
+    "교수 제거(Remove the professor)\n",
+    "\n",
+    "시스템은 선택 해제된 과정에서 교수를 제거하여 가르치지 않도록 합니다.\n",
+    "이 과정은 학기 시작 전 교수가 자신의 강의 계획을 구성하는 시스템의 기능을 상세하게 설명합니다. 각 단계는 교수와 시스템 간의 상호 작용을 명확하게 하여, 시스템이 어떻게 사용자의 요구를 충족시키는지 이해하는 데 도움이 됩니다.\n",
+    "\n",
+    "> 시스템에 뭘하면 좋다를 적어라???"
    ]
   }
  ],
