--- a/Software Engineering.ipynb
+++ b/Software Engineering.ipynb
@@ -188,6 +188,36 @@
     "\n",
     "> 시스템에 뭘하면 좋다를 적어라???"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a476b5",
+   "metadata": {},
+   "source": [
+    "23-12-08\n",
+    "### 명확히 명시\n",
+    "- 타 시스템은 개발자 너희들이 안짤꺼야 명확히 명시해줘야함\n",
+    "\n",
+    "### 로그온\n",
+    "- 특별하지 않기 때문에 굳이 안적어도 됨\n",
+    "\n",
+    "### pre-condition\n",
+    "- 코딩이 흘러가는 한 스팟에서의 관점에서 적어야 한다.\n",
+    "\n",
+    "### use case 과제 리뷰\n",
+    "- 고객이 뭘하는 이벤트인지를 적어야함.\n",
+    "- 디테일을 붙이는 작업을 해야함, 유스케이스는 더 나아가는 작업을 해야함.\n",
+    "- 프리컨디션 : 설정되어 있는 상태다.\n",
+    "- 포스트컨디션 : 시스템의 상태를 단순히 적으면 안됨."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b04f8ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
